Wrap generated tab content to avoid overlapping CSS

--- a/home.css
+++ b/home.css
@@ -1,4 +1,5 @@
-.info {
+#home {
+  height: 100%;
 	display: grid;
 	grid-template-rows: 2fr 1fr;
 	gap: 2rem;
